# aws-billing-notification

./: .gitignore  Cargo.toml  Makefile  README.md  template.yml
src/: main.rs
