[package]
name = "aws-billing-notification"
version = "0.1.0"
authors = ["xKerman <xKhorasan@gmail.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
rusoto_core = { version="0.35.0", default_features=false, features=["rustls"] }
rusoto_cloudwatch = { version="0.35.0", default_features=false, features=["rustls"] }
rusoto_ssm = { version="0.35.0", default_features=false, features=["rustls"] }
chrono = "0.4"
slack-hook = "0.7"
openssl-probe = "0.1.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
